# django-shop

./: .env.example  .flake8  .gitignore  README.md  db.json  docker-compose.yml  pyproject.toml  requirements.txt
cart/: cart.py  forms.py  urls.py  views.py
cart/templates/cart/: detail.html
coupons/: apps.py  urls.py  views.py
coupons/migrations/: 0001_initial.py
dshop/: __init__.py
dshop/cart/: apps.py  cart.py  forms.py  views.py
dshop/coupons/: admin.py  apps.py  forms.py  models.py  views.py
dshop/orders/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
dshop/orders/locale/en/LC_MESSAGES/: django.po
dshop/orders/migrations/: 0001_initial.py  0002_orderitem_braintree_id.py  0004_auto_20201024_1901.py  0005_auto_20201031_1433.py
dshop/orders/templates/admin/orders/order/: detail.html
dshop/orders/templates/orders/order/: created.html  pdf.html
dshop/payment/: apps.py  tasks.py  urls.py  views.py
dshop/shop/: admin.py  apps.py  models.py  recommender.py  urls.py  views.py
dshop/shop/migrations/: 0001_initial.py  0002_translations.py
dshop/shop/static/css/: base.css
dshop/shop/templates/shop/product/: list.html
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
myshop/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/es/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_orderitem_braintree_id.py  0003_auto_20201024_1854.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  created.html  pdf.html
payment/: tasks.py  views.py
payment/templates/payment/: canceled.html  process.html
project/: celery.py  settings.py  urls.py
shop/: admin.py  models.py  views.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
