[tool.poetry]
name = "django-shop"
version = "0.1.0"
description = "An online retail system for small businesses"
authors = ["Ahmed Shahwan <ahmed@shahwan.me>"]

[tool.poetry.dependencies]
python = "^3.8.6"
Django = "3.0.*"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
